# GoogleTest-Playground

./: CMakeLists.txt  README.md  main.cpp
assertOnException/: CMakeLists.txt  assertOnException.cpp
assertOnException/inc/: CodeUnderTest.h
assertOnString/: CMakeLists.txt  assertOnString.cpp
assertOnString/inc/: CodeUnderTest.h
assertOnVectors/: CMakeLists.txt  assertOnVector.cpp
assertOnVectors/inc/: CodeUnderTest.h
mockingExample/: CMakeLists.txt  Employee.h  EmployeeManager.cpp  EmployeeManager.h  IDatabaseConnection.cpp  IDatabaseConnection.h  testRunner.cpp
parametrizedTest/: CMakeLists.txt  parametrizedTest.cpp
parametrizedTest/inc/: CodeUnderTest.cpp  CodeUnderTest.h
testFixtures/: CMakeLists.txt  testFixtures.cpp
testFixtures/inc/: CodeUnderTest.cpp  CodeUnderTest.h
